@@ -33,8 +33,9 @@ Boxplot(y, ...)
   \item{xlab, ylab}{text labels for the horizontal and vertical axes; if missing, \code{Boxplot} will use the
     variable names.}
   \item{formula}{a `model' formula, of the form \code{~ y} to produce a boxplot for the variable \code{y}, or
-    of the form \code{y ~ g} to produce parallel boxplots for \code{y} within levels of the grouping variable
-    \code{g}, usually a factor.}
+    of the form \code{y ~ g}, \code{y ~ g1*g2*...}, or \code{y ~ g1 + g2 + ...} to 
+    produce parallel boxplots for \code{y} within levels of the grouping variable(s)
+    \code{g}, etc., usually factors.}
   \item{data, subset, na.action}{as for statistical modeling functions (see, e.g., \code{\link{lm}}).}
   \item{\dots}{further arguments to be passed to \code{\link{boxplot}}.}
 }
@@ -53,6 +54,7 @@ Boxplot(y, ...)
 \examples{
 Boxplot(~income, data=Prestige, id.n=Inf) # identify all outliers
 Boxplot(income ~ type, data=Prestige)
+Boxplot(k5 + k618 ~ lfp*wc, data=Mroz)
 with(Prestige, Boxplot(income, labels=rownames(Prestige)))
 with(Prestige, Boxplot(income, type, labels=rownames(Prestige)))
 }
